--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"scripts": {
 		"build": "tsc --build",
 		"watch": "tsc --watch",
+		"prepublish": "npm run build",
 		"lint": "prettier --write --plugin-search-dir . --check . && eslint . --quiet",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
@@ -45,7 +46,10 @@
 		"npm": ">=6.0.0"
 	},
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^6.7.4",
+		"eslint": "^8.50.0",
 		"eslint-config-custom": "^0.0.0",
+		"prettier": "^3.0.3",
 		"tsconfig": "^7.0.0"
 	}
 }
